<resources>
    <string name="app_name">Trash Finder</string>
    <string name="loading">Loading…</string>
    <string name="loading_complete">Loading complete!</string>
    <string name="generic_error">Error</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="waiting_for_sensors">Waiting for sensors…</string>
    <string name="waiting_for_gps">Waiting for GPS…</string>
    <string name="credits">App developed by Leonardo Pantani as SAM course Project. All Rights Reserved.</string>
    <string name="credits_map">Initial trash bin data is from OpenStreetMap @ openstreetmap.org</string>
    <string name="accuracy_high">High</string>
    <string name="accuracy_low">Low</string>
    <string name="fab_description">Navigate button</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="button_delete">Delete</string>
    <string name="button_navigate">Navigate</string>
    <string name="button_open">Open</string>
    <string name="placeholder">This section is going to be replaced with something else. Who knows what</string>
    <string name="placeholder2">This\\nsection\\nis\\ngoing\\nto\\nbe\\nreplaced\\nwith\\nsomething\\nelse.\\nWho\\nknows\\nwhat</string>
    <string name="version">%1$s version %2$s</string>
    <string name="notificationchannel_downloads_title">Download Service</string>
    <string name="notificationchannel_downloads_desc">Notifies you regarding downloads of trash bin data</string>
    <string name="notification_downloadstarted_title">Downloading initial trash bin data…</string>
    <string name="notification_downloadstarted_desc">Download source: %1$s</string>
    <string name="notification_downloadfailed_title">Downloading initial trash bin data…</string>
    <string name="notification_downloadfailed_desc">Failed to download the required data.</string>
    <string name="notification_downloadcompleted_title">Download of initial trash bin data complete.</string>
    <string name="notification_downloadcompleted_desc">In a few moments you will be able to see all trash bins on the map.</string>
    <string name="notification_downloadmanual_title">Download of initial trash bin data failed permanently.</string>
    <string name="notification_downloadmanual_desc">We will show some default trash bins on the map.</string>
    <string name="auth_login_successful">You are now logged in. Welcome back, %1$s!</string>
    <string name="auth_login_failed">Login failed. Error code: %1$d</string>
    <string name="auth_logout_title">Log out</string>
    <string name="auth_logout_desc">You will be able to log in back whenever you want. Remember that you cannot contribute while using this app as a guest.</string>
    <string name="auth_logout_successful">You have been logged out.</string>
    <string name="maps_filter">Filter</string>
    <string name="maps_filter_title">Types of bins you want to see</string>
    <string name="maps_bulkeditfilterbutton">Change all</string>
    <string name="section_maps">Map</string>
    <string name="section_compass">Compass</string>
    <string name="section_contributions">Contributions</string>
    <string name="section_mapeditor">Map Editor</string>
    <string name="section_requests">Requests</string>
    <string name="dialog_nolocationperm_title">Unable to get location</string>
    <string name="dialog_nolocationperm_desc">Some features may not work as intended, but you can still use %1$s as you like.</string>
    <string name="dialog_nolocationperm_button_grantperms">Grant permissions</string>
    <string name="dialog_importoncellular_title">Cellular data active</string>
    <string name="dialog_importoncellular_desc">Can %1$s download ~%2$s MB of data from the Internet to be able to show trash bins in your area?</string>
    <string name="import_download_starting">Download starting…</string>
    <string name="import_download_completed">Download completed</string>
    <string name="import_nodownload">We will use the sample trash bin data.</string>
    <string name="warning_noperms">This feature may not work if you do not grant the location permission to %1$s.</string>
    <string name="swipe_right">Swipe to continue</string>
    <string name="swipe_icon">Swipe icon</string>
    <string name="require_permissions">Give permissions</string>
    <string name="start_using_app">Start using %1$s</string>
    <string name="intro_title_1">Find</string>
    <string name="intro_desc_1">View accurate locations and types of trash bins around you</string>
    <string name="intro_title_2">Save time</string>
    <string name="intro_desc_2">Use the map and compass to quickly reach the trash bin you need</string>
    <string name="intro_title_3">Flexible</string>
    <string name="intro_desc_3">Anyone can update the map to add new trash bins and recycling depots</string>
    <string name="intro_title_4">Location access?</string>
    <string name="intro_desc_4">You need to provide permission to the location to make the best use of the app</string>
    <string name="intro_location_permissiongranted">Thank you! Enjoy full functionalities of %1$s.</string>
    <string name="intro_location_permissiondenied">You will be able to change app permissions from your phone\'s settings.</string>
    <string name="intro_title_5">You are done!</string>
    <string name="intro_desc_5">We hope that %1$s will be useful for you. If you have any doubts or problems, do not hesitate to contact us.</string>
    <string name="label_settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="show_intro_at_startup">Introduction</string>
    <string name="show_intro_at_startup_summaryOff">No introduction will be shown at the next startup</string>
    <string name="show_intro_at_startup_summaryOn">Introduction will be shown at the next startup</string>
    <string name="show_intro_at_startup_tiprestart_title">Would you like to restart %1$s?</string>
    <string name="show_intro_at_startup_tiprestart_button">Restart</string>
    <string name="setting_general_downloadagaindata_title">Invalidate current trash bin data</string>
    <string name="setting_general_downloadagaindata_desc">Tap here to download again the trash bin list.</string>
    <string name="map_settings">Map</string>
    <string name="setting_map_theme">Theme</string>
    <string name="setting_map_theme_auto">Auto</string>
    <string name="setting_map_theme_classic">Classic</string>
    <string name="setting_map_theme_light">Light</string>
    <string name="setting_map_theme_dark">Dark</string>
    <string name="setting_map_type">Map Type</string>
    <string name="setting_map_type_roads">Roadmap</string>
    <string name="setting_map_type_satellite">Satellite</string>
    <string name="compass_settings">Compass</string>
    <string name="setting_compass_update_interval">Update Interval (seconds)</string>
    <string name="setting_compass_show_tip_switchtomap">Switch to map tip</string>
    <string name="setting_compass_show_tip_switchtomap_summaryOff">No tip to switch to map will be shown if you are close to the target.</string>
    <string name="setting_compass_show_tip_switchtomap_summaryOn">When close to the target, a tip will be shown to switch to the map view.</string>
    <string name="setting_compass_measureunit">Measure unit</string>
    <string name="setting_compass_measureunit_meters">meters</string>
    <string name="setting_compass_measureunit_kilometers">kilometers</string>
    <string name="setting_compass_measureunit_feet">feet</string>
    <string name="setting_compass_measureunit_miles">miles</string>
    <string name="credits_settings">Credits</string>
    <string name="distance_difference">%1$.2f %2$s away</string>
    <plurals name="update_interval_info_box">
        <item quantity="one">Update interval: %d second</item>
        <item quantity="other">Update interval: %1$d seconds</item>
    </plurals>
    <string name="compass_icon_description">Compass icon</string>
    <string name="compass_tipswitchtomap_title">You are close to the target.</string>
    <string name="compass_tipswitchtomap_button">Switch to map</string>
    <string name="compass_tipchoosetargetfirst">Select a marker on the map.</string>
    <string name="sotw_front">front</string>
    <string name="sotw_right">right</string>
    <string name="sotw_back">back</string>
    <string name="sotw_left">left</string>
    <string name="sotw_frontright">front right</string>
    <string name="sotw_frontleft">front left</string>
    <string name="sotw_backright">back right</string>
    <string name="sotw_backleft">back left</string>
    <string name="compass_accuracy_gps">GPS Accuracy:</string>
    <string name="compass_accuracy_accelerometer">Accelerometer Accuracy:</string>
    <string name="compass_selecteditem_imgdesc">Selected item image</string>
    <string name="compass_selecteditem_noitem_title">Choose a bin to track</string>
    <string name="compass_selecteditem_noitem_desc">Tap here to select a bin on the map. An arrow pointing its direction will appear under this card.</string>
    <string name="compass_cardview_notype">This bin does not have any types set, sorry!</string>
    <string name="compass_deselect">Deselect</string>
    <string name="compass_nopermission_title">No location access</string>
    <string name="compass_nopermission_desc">Compass is not going to work if you do not grant the location permission to %1$s.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest User</string>
    <string name="nav_header_subtitle">Tap here to log in.</string>
    <string name="nav_header_subtitle_logged">Tap here to log out.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="label_feedback">Feedback</string>
    <string name="feedback_title">What would you like us to know?</string>
    <string name="feedback_type_error">Error</string>
    <string name="feedback_type_suggestion">Suggestion</string>
    <string name="feedback_text_hint">Write here…</string>
    <string name="feedback_button">Send feedback</string>
    <string name="feedback_text_error">Feedback text length must be between 10 and 500 characters long.</string>
    <string name="feedback_type_field_error">Choose a type of feedback</string>
    <string name="feedback_chooser">Select an app to send feedback</string>
    <string name="feedback_thanks">Thank you for taking the time to provide your feedback. It is very important to us that you are enjoy using our app.</string>
    <string name="community_yourcontribute_title">Your contribution:</string>
    <string name="community_yourcontribute_description">Your contribution image</string>
    <string name="community_generalstats_title">General stats:</string>
    <string name="community_generalstats_description">General stats image</string>
    <string name="community_gotomapeditor_title">Open map editor</string>
    <string name="community_gotomapeditor_desc">Click to propose new trash bin locations and edit already existing ones.</string>
    <string name="community_gotomapeditor_description">Go to map editor image</string>
    <string name="mapeditor_notes">Notes</string>
    <string name="mapeditor_markertype">Trash bin type</string>
    <string name="mapeditor_editingmarker">You are editing the selected trash bin.</string>
    <string name="mapeditor_save">Save changes</string>
    <string name="mapeditor_save_new">Create trash bin</string>
    <string name="mapeditor_creatingmarker">You are creating a new trash bin. Move the map to overlap the selector with the location of the trash bin. Afterwards edit the details of the trash bin. When you have finished press on \"Create\".</string>
</resources>