<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:icon="@drawable/ic_baseline_settings_applications_24"
        app:title="@string/general_settings">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="setting_show_intro_at_startup"
            app:summaryOff="@string/show_intro_at_startup_summaryOff"
            app:summaryOn="@string/show_intro_at_startup_summaryOn"
            app:title="@string/show_intro_at_startup" />
        <Preference
            android:key="setting_downloadagaindata"
            android:selectable="true"
            android:persistent="false"
            android:title="@string/setting_general_downloadagaindata_title"
            android:summary="@string/setting_general_downloadagaindata_desc"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/map_settings"
        app:icon="@drawable/ic_baseline_map_24">
        <ListPreference
            app:defaultValue="roads"
            app:entries="@array/setting_map_type_entries"
            app:entryValues="@array/setting_map_type_values"
            app:key="setting_map_type"
            app:title="@string/setting_map_type"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/setting_map_theme_entries"
            app:entryValues="@array/setting_map_theme_values"
            app:key="setting_map_theme"
            app:title="@string/setting_map_theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/compass_settings"
        app:icon="@drawable/ic_baseline_compass_24">
        <ListPreference
            app:defaultValue="meters"
            app:entries="@array/setting_compass_measureunit_entries"
            app:entryValues="@array/setting_compass_measureunit_values"
            app:key="setting_compass_measureunit"
            app:title="@string/setting_compass_measureunit"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="10"
            app:adjustable="true"
            app:defaultValue="1"
            app:isPreferenceVisible="true"
            app:key="setting_compass_update_interval"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/setting_compass_update_interval" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="setting_compass_show_tip_switchtomap"
            app:summaryOff="@string/setting_compass_show_tip_switchtomap_summaryOff"
            app:summaryOn="@string/setting_compass_show_tip_switchtomap_summaryOn"
            app:title="@string/setting_compass_show_tip_switchtomap" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/credits_settings"
        app:icon="@drawable/ic_baseline_info_24">
        <Preference
            android:key="settingstatic_osm"
            android:persistent="false"
            android:title=""
            android:summary="@string/credits_map"/>
        <Preference
            android:key="settingstatic_author"
            android:persistent="false"
            android:title=""
            android:summary="@string/credits"/>
        <Preference
            android:key="settingstatic_version"
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/version"/>
    </PreferenceCategory>
</PreferenceScreen>