<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maps">

    <fragment
        android:id="@+id/nav_maps"
        android:name="it.unipi.di.pantani.trashfinder.maps.MapsFragment"
        android:label="@string/section_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_compass"
        android:name="it.unipi.di.pantani.trashfinder.compass.CompassFragment"
        android:label="@string/section_compass"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/nav_community"
        android:name="it.unipi.di.pantani.trashfinder.community.CommunityFragment"
        android:label="@string/section_contributions"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/nav_mapeditor"
        android:name="it.unipi.di.pantani.trashfinder.maps.MapEditorFragment"
        android:label="@string/section_mapeditor"
        tools:layout="@layout/fragment_map_editor" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="it.unipi.di.pantani.trashfinder.community.RequestsFragment"
        android:label="@string/section_requests"
        tools:layout="@layout/fragment_requests" />
</navigation>