<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapeditor_creatingmarker"
        android:textSize="16sp" />

    <Button
        android:id="@+id/mapeditor_types_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapeditor_markertype" />

    <EditText
        android:id="@+id/mapeditor_notes_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mapeditor_notes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_marginHorizontal="5dp">
        <Button
            android:id="@+id/mapeditor_leave_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_cancel"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mapeditor_save_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mapeditor_save_new"
            android:layout_weight="0.5"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>