<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/maps_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/maps_filter"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_baseline_feedback_24"
        app:iconTint="?attr/colorSecondary"
        android:title="@string/label_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:iconTint="?attr/colorSecondary"
        android:title="@string/label_settings"
        app:showAsAction="never" />
</menu>