<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="0.95"
        tools:ignore="UselessParent"> <!-- dovuto aggiungere perché layout_margin al parent non funzionava -->

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/feedback_type"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checkedButton="@+id/feedback_type_suggestion"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/feedback_type_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback_type_error" />

            <RadioButton
                android:id="@+id/feedback_type_suggestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback_type_suggestion"
                tools:ignore="TextContrastCheck" />
        </RadioGroup>

        <EditText
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start|top"
            android:hint="@string/feedback_text_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="64dp" />

        <Button
            android:id="@+id/feedback_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/feedback_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/feedback_thanks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/feedback_thanks" />
</LinearLayout>