<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/community"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="?attr/colorSurface"
                card_view:contentPaddingBottom="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:alpha="0.85"
                        android:src="@drawable/community_cardheader_yourcontribution"
                        android:contentDescription="@string/community_yourcontribute_description"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="10dp"
                        android:text="@string/community_yourcontribute_title"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/community_yourcontribute_proposedchanges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/loading" />
                    <TextView
                        android:id="@+id/community_yourcontribute_evaluatedchanges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/loading" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:contentPaddingBottom="10dp"
                card_view:cardBackgroundColor="?attr/colorSurface"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:alpha="0.85"
                        android:src="@drawable/community_cardheader_generalstats"
                        android:contentDescription="@string/community_generalstats_description"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="10dp"
                        android:text="@string/community_generalstats_title"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/community_generalstats_numbertrashbins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/loading" />
                    <TextView
                        android:id="@+id/community_generalstats_numberchanges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/loading" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/community_card_openmapeditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:contentPaddingBottom="10dp"
                card_view:cardBackgroundColor="?attr/colorSurface"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:alpha="0.85"
                        android:src="@drawable/community_cardheader_gotomapeditor"
                        android:contentDescription="@string/community_gotomapeditor_description"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="10dp"
                        android:text="@string/community_gotomapeditor_title"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/community_gotomapeditor_desc" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>